Bug 13161 - Dariwin (snow-leopard) does not have posix_fallocate
Summary: Dariwin (snow-leopard) does not have posix_fallocate
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: sim (show other bugs)
Version: 7.3
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-07 00:19 UTC by Chris Johns
Modified: 2011-11-07 16:28 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Johns 2011-09-07 00:19:21 UTC
The file gdb-7.3/sim/common/dv-cfi.c has a call to posix_fallocate and this is not currently available on Darwin (snow-leopard). This is the only use of this call in gdb I could see.
Comment 1 Mike Frysinger 2011-11-06 06:54:40 UTC
posted a fix:
http://sourceware.org/ml/gdb-patches/2011-11/msg00139.html
Comment 2 Mike Frysinger 2011-11-07 16:28:47 UTC
committed aforementioned fix